--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mkdirp": "0.3.4",
     "rmdir": "1.0.0",
     "canvas": "*",
-    "humanize": "0.0.6"
+    "humanize": "0.0.6",
+    "mongoose": "~3.6.4"
   },
   "test": "mocha tests -R spec"
 }
