--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,21 @@
 /test_resources/
 /tests/.out/
 /tests/.solar_input/sunlight/
+/GLOBE_data/a10g
+/GLOBE_data/a11g
+/GLOBE_data/b10g
+/GLOBE_data/c10g
+/GLOBE_data/d10g
+/GLOBE_data/e10g
+/GLOBE_data/f10g
+/GLOBE_data/g10g
+/GLOBE_data/h10g
+/GLOBE_data/i10g
+/GLOBE_data/j10g
+/GLOBE_data/k10g
+/GLOBE_data/l10g
+/GLOBE_data/m10g
+/GLOBE_data/n10g
+/GLOBE_data/o10g
+/GLOBE_data/p10g
+/npm-debug.log
