--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "gate": "~0.3.0",
     "csv": "~0.3.0",
     "node-static": "~0.7.0",
-    "tap": "~0.4.3"
+    "tap": "~0.4.3",
+    "cli-table": "~0.2.0"
   },
   "test": "mocha tests -R spec"
 }
