--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "humanize": "0.0.6",
     "mongoose": "~3.6.4",
     "simplex-noise": "~2.1.1",
-    "express": "~3.3.4"
+    "express": "~3.3.4",
+    "readline": "0.0.3",
+    "line-by-line": "~0.1.1"
   },
   "devDependencies": {
     "mocha": "0.3.0",
