updated mongoose; working on sectors

--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   },
   "dependencies": {
     "chai": "~1.4.2",
-    "async": "~0.1.22",
+    "async": "~0.2.9",
     "express": "~3.3.4",
     "cli-table": "~0.2.0",
     "mkdirp": "~0.3.4",
     "csv": "~0.3.4",
-    "mongoose": "~3.6.16",
+    "mongoose": ">=3.7.1",
     "rmdir": "~1.0.0",
     "should": "~1.2.1",
     "line-input-stream": "~1.0.1",
